@@ -20,6 +20,7 @@ Revision 0.3.0, released XX-11-2019
 - Add RFC2876 providing KEA and SKIPJACK for CMS
 - Add RFC3058 providing IDEA Encryption Algorithm for CMS 
 - Add RFC3657 providing Camellia Encryption Algorithm for CMS 
+- Add RFC4010 providing SEED Encryption Algorithm for CMS 
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
